# vnpy3

./: readme.md
vnpy/: CMakeLists.txt  compile.bat  compile.sh
vnpy/api/ctp/: CMakeLists.txt  readme.md
vnpy/api/ctp/vnctpmd/: CMakeLists.txt  vnctpmd.h
vnpy/api/ctp/vnctptd/: CMakeLists.txt  vnctptd.h
vnpy/api/xtp/: CMakeLists.txt  __init__.py  readme.md  xtpGateway.py  xtpGateway_md.py  xtpGateway_td.py
vnpy/api/xtp/vnxtpquote/: CMakeLists.txt  vnxtpquote.cpp  vnxtpquote.h
vnpy/api/xtp/vnxtptrader/: CMakeLists.txt  vnxtptrader.cpp  vnxtptrader.h
vnpy/api/xtp/xtpapi-1.1.16/win32/dll/: xtpquoteapi.lib  xtptraderapi.lib
vnpy/api/xtp/xtpapi-1.1.16/win64/dll/: xtpquoteapi.lib  xtptraderapi.lib
vnpy/cmake/: configuration.cmake  vnpy3common.cmake
